Fixed the footer
footer is not centered on all pages and sizes

--- a/static/style.css
+++ b/static/style.css
@@ -37,16 +37,19 @@
 	}
 
 	footer a{
-		display: block;
-		text-align: center;
 		border: 3px solid black;
-		margin: 3px;
 		border-radius: 30px;
 		background-color: white;
-		margin: 0 auto;
 		margin-bottom: 3px;
 		margin-top: 3px;
 		width: 80%;
+		display: block;
+		text-align: center;
+	}
+	footer{
+		display: block;
+		text-align: center;
+/*		width: 100%;*/
 	}
 	#top{
 		font-weight: bold;
@@ -77,7 +80,12 @@
 		width: 75%;
 		padding: 2%;
 	}
+	footer a{
+		display: block;
+		margin: 0 auto;
+	}
 }
+
 
 @media all and (min-width: 800px){
 	body{
